# zmanifest

./: CHANGELOG.md  README.md  pyproject.toml
benchmarks/: parquet_layout.py  parquet_scaling.py
docs/: content-encoding.md  parquet-layout.md  resolve-chain.md
src/zmanifest/: __init__.py  _types.py  builder.py  cli.py  convert.py  manifest.py  path.py  resolve.py  resolver.py
src/zmp/: __init__.py  convert.py  manifest.py  resolve.py  resolver.py
tests/: conftest.py  test_builder.py  test_cli.py  test_content_encoding.py  test_data_location.py  test_manifest.py  test_path.py  test_resolver_base.py
