[project]
name = "zmanifest"
version = "0.9.0"
description = "ZMP (Manifest Parquet) — content-addressed file manifest format"
readme = "README.md"
authors = [
    { name = "MH", email = "mhalle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=15.0",
    "rfc8785>=0.1.4",
]

[project.optional-dependencies]
git = ["vost>=0.78.1"]
http = ["httpx"]
test = ["pytest", "pytest-asyncio", "vost>=0.78.1"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
