[project]
name = "zmanifest"
version = "0.16.0"
description = "ZMP (Manifest Parquet) — content-addressed file manifest format"
readme = "README.md"
authors = [
    { name = "MH", email = "mhalle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=15.0",
    "rfc8785>=0.1.4",
    "zstandard>=0.20",
    "lz4>=4.0",
    "brotli>=1.0",
    "click>=8.0",
    "httpx[http2]",
    "remotezip>=0.12",
]

[project.scripts]
zmp = "zmanifest.cli:cli"

[project.optional-dependencies]
git = ["vost>=0.78.1"]
http = []
test = ["pytest", "pytest-asyncio", "vost>=0.78.1"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
